--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <nav>
         <ul>
             <li><a href="./"><b>Home</b></a></li>
-            <li><a href="./About/"><b>Sign up</b></a></li>
+            <li><a href="/github.io/About/index.html"><b>Sign up</b></a></li>
         </ul>
     </nav>
     <h1>
