--- a/index.html
+++ b/index.html
@@ -1,49 +1,129 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 01 Personal Profile and Biography</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="styleguide.css" />
+    <link rel="stylesheet" href="/github.io/styles/style.css" />
+    <title>Assignment 2 Forms</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="./"><b>Home</b></a></li>
-            <li><a href="./About/"><b>Sign up</b></a></li>
-        </ul>
-    </nav>
-    <h1>
-        <div>
-            <p style="margin: 0; text-align: center">Alt___</p>
-            <p style="margin: 0; text-align: center;">School</p>
-        </div>
-    </h1>
-    <header style="text-align: center;"><h2>PROFILE, BIOGRAPHY, REASON AND GOAL AT ALT SCHOOL</h2></header>
-
-    <h3>STUDENT NAME AND IDENTIFICATION</h3>
-    <P>Anthony Okechukwu Okafor</P>
-    <p>Alt School Student I.D - ALT/SOE/023/3541</p>
-
-    <h3>REASONS BEING AT ALT SCHOOL</h3>
-    <P>Alt School Africa was highly recommended and has a good rating on the internet, in terms of perfomance<br>
-       in a short period of existence.</P>
-
-       <h3>MY GOALS AT ALT SCHOOL AFRICA</h3>
-       <P>My ultimate goal is for the institution to be much better than it was, when I started.<br>I also want to take part and be active in the process after graduation.</P>
-
-       <h3>A SHORT BIOGRAPHY OF ME</h3>
-       <p>My name is Anthony Okechukwu Okafor, currently a student at Alt School Africa.<br>
-        My course of study is Frontend Engineering, School of Software Engineering.<br>
-        I'm a Nigerian from Delta state, Btech (physics Electronics major) Nnamdi Azikiwe University.<br>
-         CAD drafter, computer technician and an aspiring software engineer.<br>
-        <br>
-        Besides computers, I love reading, researching and writing. <br>
-        Cooking is fun to me, a way of relaxing and passing time.<br>
-        <br>
-        I'm Aspiring to be a topnotch, Full Stack Developer <br>
-        who's aim is to learn, develop and impact positively in the society.     
-        </p>
-
-    
+    <div class="sign-up-individual">
+        <div class="overlap-wrapper">
+            <div class="overlap">
+                <div class="box"><div class="bg"></div></div>
+                <div class="group">
+                    <img class="logo" src="/github.io/Assets/Image/Logo.png" />
+                    <p class="text-wrapper">
+                        start benefiting from the wellness experience. For companies looking on increasing productivity,
+                        and improving organization wellness.
+                    </p>
+                    <div class="div">For Individuals</div>
+                </div>
+                <div class="bg-2"></div>
+                <div class="form-filled-no">
+                    <div class="form-filled-no-2">
+                        <div class="bg-3"><img class="edit-show" src="img/show.svg" /></div>
+                        <div class="label">
+                            <div class="title">Password</div>
+                            <div>
+                                <input type="password" required class="bg-3" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-filled-no-wrapper">
+                    <div class="form-filled-no-2">
+                        <div class="bg-4"></div>
+                        <div class="title-wrapper">
+                            <div class="title-2">Last Name</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="div-wrapper">
+                    <div class="form-filled-no-2">
+                        <div class="bg-4">
+                            <div class="placeholder">
+                                <select name="gender" required>
+                                    <option value="selected" class="placeholder">Select here</option>
+                                    <option value="Male" class="placeholder">Male</option>
+                                    <option value="Female" class="placeholder">Female</option>
+                                    <option value="Others" class="placeholder">Others</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="title-wrapper">
+                            <div class="title-2">Gender</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-filled-no-3">
+                    <div class="form-filled-no-2">
+                        <div class="bg-4">
+                            <div class="placeholder">Enter weight</div>
+                        </div>
+                        <div class="title-wrapper">
+                            <div class="title-2">Weight (KG)</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-filled-no-4">
+                    <div class="form-filled-no-2">
+                        <div class="bg-3">
+                            <div class="placeholder-2">
+                                <select name="gender" required id="select">
+                                    <option value="selected" class="placeholder-2">Select here</option>
+                                    <option value="text" class="placeholder-2">Level 1</option>
+                                    <option value="text" class="placeholder-2">Level 2</option>
+                                    <option value="text" class="placeholder-2">Level 3</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="label">
+                            <div class="title">Activity Level</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-filled-no-5">
+                    <div class="form-filled-no-2">
+                        <div class="bg-4">
+                            <img class="img/u-a-calender-alt.svg" />
+                            <div class="placeholder">Select here</div>
+                        </div>
+                        <div class="title-wrapper">
+                            <div class="title-2">Date of Birth</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-filled-no-6">
+                    <div class="form-filled-no-2">
+                        <div class="bg-4">
+                            <div class="placeholder">Enter height here..</div>
+                        </div>
+                        <div class="title-wrapper">
+                            <div class="title-2">Height (CM)</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-focus-no">
+                    <div class="overlap-group">
+                        <div class="bg-wrapper">
+                            <div class="bg-5"></div>
+                        </div>
+                        <div class="placeholder-3">Anthony</div>
+                    </div>
+                    <div class="title-wrapper">
+                        <div class="title-2">First Name</div>
+                    </div>
+                </div>
+                <button div class="button-text-wrapper">Register</button>
+            </div>
+            <p class="by-clicking-register">
+                <span class="span">By clicking Register, you agree to our </span>
+                <span class="text-wrapper-2">Terms of Use</span>
+                <span class="span">and our </span>
+                <span class="text-wrapper-2">Privacy Policy</span>
+            </p>
 </body>
 </html>
